--- a/finance/templates/finance/index.html
+++ b/finance/templates/finance/index.html
@@ -3,32 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="/static/finance/normalize.css">
+    <link rel="stylesheet" href="/static/finance/skeleton.css">
     <title>Finance application</title>
     <script src="/static/finance/jquery-3.6.0.min.js"></script>
+    <script src="/static/finance/finance.js"></script>
     <script>
-        function get_accounts() {
-            $.getJSON( "/accounts", function( resp ) {
-                var accounts_div = $('<div />').appendTo('body');
-                accounts_div.attr('id', 'accounts');
-                $.each( resp['accounts'], function( key, value ) {
-                    console.log( key + " : " + JSON.stringify(value, null, 2) );
-                    var tmp_p = $('<p>').appendTo(accounts_div);
-                    var button = $('<button>').appendTo(tmp_p);
-                    button.click(function () {expand_account(value['id']);});
-                    button.text(value['name']);
-                });
-            });
-        }
-
-        function expand_account(id) {
-            console.log('opening account: ' + id);
-        }
-
         $( document ).ready(function() {
             get_accounts();
         });
     </script>
 </head>
 <body>
+<div id="container"></div>
 </body>
 </html>
